Decrease top level first level menu items font size and side padding, which should fix slider and content alignment problems in Firefox and Chrome on Windows.

--- a/src/pd.theme/pd/theme/static/additional.css
+++ b/src/pd.theme/pd/theme/static/additional.css
@@ -599,3 +599,11 @@ table.plain td {
     border: none
 }
 /*end ADDED VIA CMS*/
+
+/* Fix for Firefox and Chrome on Windows */
+@media screen and (min-width: 1024px) and (max-width: 1120px) {
+.top-nav .navlevel0 > li > a {
+    padding: 0 12px;
+    font-size: 12px;
+}
+}
